# C_syspro

./: .gitignore  CMakeLists.txt
01/: 1_helloworld.c  2_calc.c
02/: 1_zerocalc.c  2_leapyear.c
03/: 1_fizzbuzz.c  2_square.c  3_triangle.c  4_isPrime.c  5_primeNums.c  6_luckyTicket.c  7_pacman.c
04/: 04_1.c  04_2.c  04_3.c
05/: 05_1.c  05_2.c  05_3.c
06/: extractDigits.c  findInArr.c  main.c  revertArr.c  scanArr.c
07/: main.c
08/: compareArrays.c  main.c
08_1/: main.c  printArr.c
08_2/: maxInArr.c  scanArr.c
09/: 1_concat.c  2_findSubArr.c
